add: primeiro desafio

--- a/Logica 1.html
+++ b/Logica 1.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
     <title>Lógica 1</title>
     <script>
+        nome_do_carro = "Fusca";
 
+        alert("O nome do carro na varável é ", nome_do_carro);
     </script>
   </head>
   <body>
-
   </body>
 </html>
