add: criação exercício 2

--- a/Logica 2.html
+++ b/Logica 2.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
-    <title>Lógica 1</title>
+    <title>Lógica 2</title>
     <script>
-        var nome_do_carro = "Fusca";
+        var nome_usuario = prompt("Informe o seu nome de usuário: ");
 
-        alert("O nome do carro na varável é " + nome_do_carro);
+        alert("Olá " + nome_usuario);
     </script>
   </head>
   <body>
