add: area losango

--- a/Logica 4 - Retangulo.html
+++ b/Logica 4 - Retangulo.html
@@ -45,7 +45,7 @@
 
           var area = base * altura;
           var result = document.querySelector("#result");
-          result.textContent = "Área do objeto pe igual a " + area;
+          result.textContent = "Área do objeto é igual a " + area;
         }
     </script>
   </head>
