--- a/Logica 4 - Losango.html
+++ b/Logica 4 - Losango.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
-    <title>Lógica 4 - Área Quadrado</title>
+    <title>Lógica 4 - Área Losango</title>
     <style>
         section.main-content {
           width: 50vw;
           display:flex;
-          /*grid-template-columns: repeat(auto-fit, minmax(10px, 1fr));*/
+          grid-template-columns: repeat(auto-fit, minmax(10px, 1fr));
           gap: 20px;
           margin: 0 auto;
         }
@@ -37,11 +37,13 @@
           mensage.textContent = "";
           mensage.style.display = "none";
 
-          var lado = parseFloat(document.getElementById("lado").value);
+          var maior = parseFloat(document.getElementById("di-maior").value);
+          var menor = parseFloat(document.getElementById("di-menor").value);
 
-          if(isNaN(lado) || lado <= 0.0) { mensage.style.display = ""; mensage.textContent = "! Valor de lado inválido"; }
+          if(isNaN(maior) || maior <= 0.0) { mensage.style.display = ""; mensage.textContent = "! Valor da diagonal maior inválido"; }
+          if(isNaN(menor) || menor <= 0.0) { mensage.style.display = ""; mensage.textContent = "! Valor da diagonal menor inválido"; }
 
-          var area = lado * lado;
+          var area = (maior * menor)/2;
           var result = document.querySelector("#result");
           result.textContent = "Área do objeto é igual a " + area;
         }
@@ -49,13 +51,15 @@
   </head>
   <body>
     <main>
-        <h2 class="center">Calcule a área de Quadrado</h2>
+        <h2 class="center">Calcule a área de Losango</h2>
         <section class="main-content">
-            <img src="exemplo/quadrado-exemplo.png" alt="imagem de um quadrado tridmensionalmente">
+            <img src="exemplo/losango-exemplo.png" alt="imagem de um losango tridmensionalmente">
             <div>
               <p id="mensage" style="display: none;"></p>
-              <label>Lado:</label>
-              <input type="text" id="lado" name="lado">
+              <label>Diagonal Maior:</label>
+              <input type="text" id="di-menor" name="di-menor">
+              <label>Diagonal Menor:</label>
+              <input type="text" id="di-maior" name="di-maior">
               <input type="submit" onclick="Calcular()" value="Calcular"> 
               <p id="result"></p>
             </div>
