--- a/Logica 4 - Paralelogramo.html
+++ b/Logica 4 - Paralelogramo.html
@@ -3,14 +3,17 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
-    <title>Lógica 4 - Área Quadrado</title>
+    <title>Lógica 4 - Área Paralelogramo</title>
     <style>
         section.main-content {
           width: 50vw;
           display:flex;
-          /*grid-template-columns: repeat(auto-fit, minmax(10px, 1fr));*/
+          grid-template-columns: repeat(auto-fit, minmax(10px, 1fr));
           gap: 20px;
           margin: 0 auto;
+        }
+        img {
+          width: 350px;
         }
         .center {
           text-align: center;
@@ -23,9 +26,6 @@
         }
         section input[type="submit"], #mensage {
           margin: 10px 0 0 5px;
-        }
-        img {
-          width: 350px;
         }
         #mensage {
           padding: 10px;
@@ -40,11 +40,13 @@
           mensage.textContent = "";
           mensage.style.display = "none";
 
-          var lado = parseFloat(document.getElementById("lado").value);
+          var base = parseFloat(document.getElementById("base").value);
+          var altura = parseFloat(document.getElementById("altura").value);
 
-          if(isNaN(lado) || lado <= 0.0) { mensage.style.display = ""; mensage.textContent = "! Valor de lado inválido"; }
+          if(isNaN(base) || base <= 0.0) { mensage.style.display = ""; mensage.textContent = "! Valor de base inválido"; }
+          if(isNaN(altura) || altura <= 0.0) { mensage.style.display = ""; mensage.textContent = "! Valor de altura inválido"; }
 
-          var area = lado * lado;
+          var area = base * altura;
           var result = document.querySelector("#result");
           result.textContent = "Área do objeto é igual a " + area;
         }
@@ -52,13 +54,15 @@
   </head>
   <body>
     <main>
-        <h2 class="center">Calcule a área de Quadrado</h2>
+        <h2 class="center">Calcule a área de Paralelogramo</h2>
         <section class="main-content">
-            <img src="exemplo/quadrado-exemplo.png" alt="imagem de um quadrado tridmensionalmente">
+            <img src="exemplo/paralelogramo-exemplo.png" alt="imagem de um Paralelogramo 2d">
             <div>
               <p id="mensage" style="display: none;"></p>
-              <label>Lado:</label>
-              <input type="text" id="lado" name="lado">
+              <label>Base:</label>
+              <input type="text" id="base" name="base">
+              <label>Altura:</label>
+              <input type="text" id="altura" name="altura">
               <input type="submit" onclick="Calcular()" value="Calcular"> 
               <p id="result"></p>
             </div>
