--- a/Logica 4 - Retangulo.html
+++ b/Logica 4 - Retangulo.html
@@ -24,6 +24,9 @@
         section input[type="submit"], #mensage {
           margin: 10px 0 0 5px;
         }
+        img {
+          width: 350px;
+        }
         #mensage {
           padding: 10px;
           background-color: rgb(221, 90, 90);
